# shortgit

./: .gitignore  CLI_REFERENCE.md  LICENSE.TXT  README.md  pyproject.toml
src/shortgit/: cli.py
